# wavetype

./: .gitignore  CONTRIBUTING.md  FEATURES.md  LICENSE  PROJECT_BRIEF.md  README.md  index.html  latest.json  package.json  pnpm-lock.yaml  reset-trial.sh  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  test-macos.yml
public/: overlay.html
release-signing/: Wavee_1.0.0_x64-setup.exe.sig  Wavee_1.0.0_x64_en-US.msi.sig  latest.json
scripts/: build-production.sh  dev.sh  generate-latest-json.mjs  generate-update-keys.sh  sign-release.sh
sidecar/parakeet-swift/: Package.swift  build.sh
sidecar/parakeet-swift/Sources/: main.swift
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  WaveType-backup-2025-12-17.json  WaveType.entitlements  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  database.rs  downloader.rs  error_reporting.rs  lib.rs  license.rs  main.rs  parakeet.rs  post_process.rs  security.rs  text_inject.rs  transcription.rs
src-tauri/tests/: backend_e2e.rs  database_license.rs  database_persistence.rs  license_access.rs  license_manager_integration.rs
src/components/: error-boundary.tsx  history-view.tsx  license-view.tsx  logo.tsx  main-view.tsx  settings-view.tsx  transcribe-view.tsx  trial-expired-view.tsx  updater-view.tsx
src/components/setup/: complete-step.tsx  hotkey-step.tsx  index.ts  license-step.tsx  microphone-step.tsx  model-select-step.tsx  setup-wizard.tsx  welcome-step.tsx
src/components/ui/: character-morph.tsx  chart.tsx  keyboard-shortcut.tsx  recording-indicator.tsx  sonner.tsx  speaking-overlay.tsx  toast-container.tsx  wave-overlay.tsx
src/hooks/: use-toast.ts
src/lib/: data-management.ts  database-api.ts  errors.ts  license-api.ts  logger.ts  parakeet-api.ts  preferences-api.ts  tauri-api.ts  updater-api.ts  utils.ts  voice-api.ts
src/store/: app-store.ts  index.ts
src/types/: index.ts
